--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,53 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<html lang="ko">-->
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>세종대병원 ESL 인트로</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-    <!--Font awesome icons-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />-->
-    <!--<script src="https://kit.fontawesome.com/18f8115274.js" crossorigin="anonymous"></script>-->
-    <!-- Core theme CSS (includes Bootstrap)-->
-
-    <link th:href="@{/css/styles.css}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-          integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-          integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-</head>
+<head th:replace="fragments/header :: header" />
 <body>
 <!-- Responsive navbar-->
 <!-- !border: 3px solid rgb(0, 0, 0); -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" th:onclick="|location.href='@{/}'|" style="cursor:pointer">
-            <img src="assets/images/sejong_black.png" width="37" style="
-                  border-radius: 70px;
-                  -moz-border-radius: 70px;
-                  -khtml-border-radius: 70px;
-                  -webkit-border-radius: 70px;
-                  " alt="My Logo">
-            세종대병원</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <!-- bodyTopLogo -->
+        <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link"
@@ -70,12 +30,6 @@
                         <br>Welcome to<br>ESL-병원시스템
                     </h2>
                     <p class="lead text-white-50 mb-4">capstone-ESL</p>
-                    <!--
-                        <div class="d-grid gap-3 d-sm-flex align-items-start">
-                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="./loginForm.html" align="left">로그인</a>
-                            <a class="btn btn-outline-light btn-lg px-4" href="./user_register.html" align="left">회원 가입</a>
-                        </div>
-                        -->
                 </div>
             </div>
             <div class="col-sm-5 col-md-6">
@@ -97,7 +51,7 @@
                 </div>
                 <h2 class="h4 fw-bolder">환자 Part</h2>
                 <p>환자의 관한 정보를 처리할 수 있습니다.</p>
-                <a class="text-decoration-none" th:onclick="|location.href='@{/login}'|">
+                <a class="text-decoration-none" th:onclick="|location.href='@{/patient}'|">
                     들어가기
                     <i class="bi bi-arrow-right"></i>
                 </a>
@@ -107,7 +61,7 @@
                 </div>
                 <h2 class="h4 fw-bolder">간호사 Part</h2>
                 <p>부가 설명 칸입니다.</p>
-                <a class="text-decoration-none" th:onclick="|location.href='@{/login}'|">
+                <a class="text-decoration-none" th:onclick="|location.href='@{/nurse}'|">
                     들어가기
                     <i class="bi bi-arrow-right"></i>
                 </a>
@@ -117,7 +71,7 @@
                 </div>
                 <h2 class="h4 fw-bolder">의사 Part</h2>
                 <p>부가 설명 칸입니다.</p>
-                <a class="text-decoration-none" th:onclick="|location.href='@{/login}'|">
+                <a class="text-decoration-none" th:onclick="|location.href='@{/doctor}'|">
                     들어가기
                     <i class="bi bi-arrow-right"></i>
                 </a>
@@ -127,7 +81,7 @@
                         class="bi bi-wrench-adjustable"></i></div>
                 <h2 class="h4 fw-bolder">관리자 Part</h2>
                 <p>관리자의 권한으로만 접근가능합니다.</p>
-                <a class="text-decoration-none" th:onclick="|location.href='@{/login}'|">
+                <a class="text-decoration-none" th:onclick="|location.href='@{/admin}'|">
                     들어가기
                     <i class="bi bi-arrow-right"></i>
                 </a>
@@ -136,18 +90,6 @@
     </div>
 </section>
 <!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container px-5">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-    </div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!---->
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<div th:replace="fragments/footer :: footer"/>
 </body>
-
 </html>
