--- a/src/main/resources/templates/join/userJoinNurse.html
+++ b/src/main/resources/templates/join/userJoinNurse.html
@@ -1,60 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<html lang="ko">-->
-
+<head th:replace="fragments/header :: header" />
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>세종대병원 ESL 인트로</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-    <!--Font awesome icons-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />-->
-    <!--<script src="https://kit.fontawesome.com/18f8115274.js" crossorigin="anonymous"></script>-->
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-        integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!--우편번호 api-->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script src="./address_number.js"></script>
+    <script th:src="@{//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js}"></script>
+    <script type="text/javascript" th:src="@{/js/address_number.js}"></script>
+    <!-- error -->
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
-
 <body>
     <!-- Responsive navbar-->
     <!-- !border: 3px solid rgb(0, 0, 0); -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
         <div class="container px-5">
-            <a class="navbar-brand" th:onclick="|location.href='@{/}'|" style="cursor:pointer">
-                <img src="assets/images/sejong_black.png" width="37" style="                 
-                  border-radius: 70px;
-                  -moz-border-radius: 70px;
-                  -khtml-border-radius: 70px;
-                  -webkit-border-radius: 70px;
-                  " alt="My Logo" >
-                세종대병원</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <!--List Add-->
+                    <li class="nav-item"><a class="nav-link"
+                                            th:onclick="|location.href='@{/login}'|"
+                                            style=" font-size:1.0em; width:90px; height:39px">로그인</a></li>
                 </ul>
             </div>
         </div>
@@ -68,52 +37,54 @@
                 <div class="card card-signin my-5">
                   <div class="card-body">
                     <h2 class="card-title text-center mb-5">세종대병원</h2>
-                    <form class="form-user-register" method="post" action="login">
+                    <form class="form-user-register" method="post" action="login"  th:action th:object="${nurse}">
                         <hr>
                         <div class = "row">
                             <div class="form-group col-md-6 ">
                                 <label class = "form-label" for = "id">아이디</label>
-                                <input type="text" id="id" name="id" class="form-control" required autofocus>
+                                <input type="text" id="id" th:field="*{loginId}" class="form-control" th:errorclass="field-error">
+                                <div class="field-error" th:errors="*{loginId}" />
                             </div>
                 
                             <div class="form-group col-md-6 mb-4">
                                 <label class = "form-label" for = "pwd">비밀번호</label>
-                                <input type="password" id="pwd" name="pwd" class="form-control" required autofocus>
+                                <input type="password" id="pwd" th:field="*{loginPw}" class="form-control" th:errorclass="field-error">
+                                <div class="field-error" th:errors="*{loginPw}" />
                             </div>
                         </div>
 
                         <div class="form-group mb-4">
                           <label class = "form-label" for = "name">이름</label>
-                          <input type="text" id="name" name="name" class="form-control" required autofocus>
+                            <input type="text" id="name" th:field="*{name}" class="form-control" th:errorclass="field-error">
+                            <div class="field-error" th:errors="*{name}" />
                         </div>
 
                         <div class = "row">
                             <label class = "form-label" for = "human-number">주민등록번호</label>
 
                             <div class="form-group col-md-6">
-                                <input type="text" id="human-number" name="human-number" class="form-control" placeholder = "생년월일 YYMMDD" required autofocus>
+                                <input type="text" id="human-number" th:field="*{rrnFront}" class="form-control" placeholder = "생년월일 YYMMDD" th:errorclass="field-error">
+                                <div class="field-error" th:errors="*{rrnFront}" />
                             </div>
                             
                             <div class="form-group col-md-6 mb-4">
-                                <input type="password" id="human-number" name="human-number2" class="form-control" placeholder = "주민번호 뒷 7자리" required autofocus>
+                                <input type="password" id="human-number" th:field="*{rrnBack}" class="form-control" placeholder = "주민번호 뒷 7자리" th:errorclass="field-error">
+                                <div class="field-error" th:errors="*{rrnBack}" />
                             </div>
                         </div>
 
                         <div class="form-group mb-4">
                             <label class = "form-label" for = "phone-number">전화 번호</label>
-                            <input type="text" id="phone-number" name="phone-number" class="form-control" placeholder = "010-XXXX-XXXX" required autofocus>
+                            <input type="text" id="phone-number" th:field="*{phoneNumber}" class="form-control" placeholder = "010-XXXX-XXXX" th:errorclass="field-error">
+                            <div class="field-error" th:errors="*{phoneNumber}" />
                         </div>
 
-                        <div class="form-group mb-4">
-                            <label class = "form-label" for = "E-mail">이메일</label>
-                            <input type="text" id="E-mail" name="E-mail" class="form-control" placeholder = "Sejong@Example.com" required autofocus>
-                        </div>
-                    
                         <div class = "row">
                             <label class = "form-label" for = "post-number">우편번호</label>
 
                             <div class = "form-group mb-4 col-md-5">
-                                <input type="text" id="post-number" name="post-number" class="form-control" placeholder = "05006" required autofocus>
+                                <input type="text" id="post-number" th:field="*{zipcode}" class="form-control" placeholder = "05006" th:errorclass="field-error">
+                                <div class="field-error" th:errors="*{zipcode}" />
                             </div>
 
                             <div class ="form-group mb-4 col-md-4">
@@ -123,17 +94,32 @@
 
                         <div class="form-group mb-4">
                             <label class = "form-label" for = "address">주소</label>
-                            <input type="text" id="address" name="address" class="form-control" placeholder="ex) 서울특별시 광진구 능동로" required autofocus>
+                            <input type="text" id="address" th:field="*{city}" class="form-control" placeholder="ex) 서울특별시 광진구 능동로" th:errorclass="field-error">
+                            <div class="field-error" th:errors="*{city}" />
                         </div>
 
                         <div class="form-group mb-4">
                             <label class = "form-label" for = "detail-address">상세주소</label>
-                            <input type="text" id="detail-address" name="detail-address" class="form-control" required autofocus>
+                            <input type="text" id="detail-address" th:field="*{street}" class="form-control" th:errorclass="field-error">
+                            <div class="field-error" th:errors="*{street}" />
                         </div>
                         <div class = "form-row mb-4">                 
-                            <label class = "form-label" for = "code">등록 코드</label>
-                            <input type="text" id="code" name="code" class="form-control" placeholder="XXX-0000" required autofocus>
+                            <label class = "form-label" for = "code">간호사 면허 코드</label>
+                            <input type="text" id="code" th:field="*{licenseCode}" class="form-control" placeholder="XXX-0000" th:errorclass="field-error">
+                            <div class="field-error" th:errors="*{licenseCode}" />
                         </div>
+
+                        <!-- 추가 major -->
+
+                        <div>
+                            <div>전공</div>
+                            <select th:field="*{major}" class="form-select">
+                                <option value="">==전공 선택==</option>
+                                <option th:each="major : ${majors}" th:value="${major.name()}"
+                                        th:text="${major.description}">none</option>
+                            </select>
+                        </div>
+
                         <div class="text-center mb-4">
                             <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">회원가입</button>
                         </div>
@@ -151,20 +137,7 @@
     </section>
 
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
