--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,16 +4,19 @@
     <footer class="py-5 bg-dark">
         <div class="container px-5">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
+            <hr>
+            <p class = "m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
         </div>
     </footer>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script type="text/javascript" th:src="@{/js/scripts.js}"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <script type="text/javascript" th:src="@{/js/otherFunction.js}"></script>
 </div>
