--- a/src/main/resources/templates/join/userJobSelect.html
+++ b/src/main/resources/templates/join/userJobSelect.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-    <!-- Responsive navbar-->
-     <!-- !border: 3px solid rgb(0, 0, 0); -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <!-- Top -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
         <div class="container px-5">
             <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
