--- a/src/main/resources/templates/fragments/bodyTopLogo.html
+++ b/src/main/resources/templates/fragments/bodyTopLogo.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="bodyTopLogo">
 <a class="navbar-brand" th:onclick="|location.href='@{/}'|" style="cursor:pointer">
-    <img src="../assets/images/sejong_black.png" width="37" style="
+    <img src="../../assets/images/sejong_black.png" width="37" style="
                   border-radius: 70px;
                   -moz-border-radius: 70px;
                   -khtml-border-radius: 70px;
