--- a/src/main/resources/templates/join/userJobSelect.html
+++ b/src/main/resources/templates/join/userJobSelect.html
@@ -18,8 +18,8 @@
 
     <!--단계 표시-->
     <header class = "container mb-5">
-        <h1 class = "text-center">1. 회원 선택</h1>
-        <p class = "text-center">현재 회원 선택 페이지입니다. <br> <strong>회원 가입을 진행할 회원을 선택하세요.</strong></p>
+        <h1 class = "text-center">회원가입</h1><br><br>
+        <p class = "text-center">세종대병원 홈페이지에 방문해주셔서 감사 드립니다. <br> <strong>회원 가입을 진행할 회원을 선택하세요.</strong></p><br>
         <div class = "progress" style = "height: 30px;">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
             aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
@@ -58,9 +58,6 @@
 
             </div>
 
-            <div class="text-center">
-                <button class = "btn btn-light" type = "button" th:onclick="|location.href='@{/}'|">이전</button>
-            </div>       
         </div>
 
         <div class="svg-border-rounded text-light">
