--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
+<head>
+    <title>세종대병원</title>
+</head>
 <body>
 <!-- Responsive navbar-->
 <!-- !border: 3px solid rgb(0, 0, 0); -->
