--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -1,21 +1,13 @@
-.join .step ol li {
-    position: relative;
-    float: left;
-    padding-right: 106px;
-    background-image: url(../assets/images/ico-arrow-right-gray@2x.png);
-    background-size: 14px 24px;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 50px);
-}
-        .join .step ol li.on .box {
+
+.join .step ol li.on .box {
     border-color: #0094fb;
     color: #0094fb;
     font-weight: bold;
 }
-        .join .step {
+.join .step {
     margin: 0 auto 55px;
 }
-        .join .step:after {
+.join .step:after {
     display: block;
     clear: both;
     content: '';
@@ -29,14 +21,14 @@ li {
     display: list-item;
     text-align: -webkit-match-parent;
 }
-        body {
+body {
     min-width: 360px;
     font-size: 16px;
     color: #333;
     letter-spacing: 0.02em;
     line-height: 1.625;
 }
-        .join .step ol li .box {
+.join .step ol li .box {
     padding: 0 0 0 90px;
     width: 240px;
     height: 50px;
@@ -80,27 +72,99 @@ body {
     letter-spacing: 0.02em;
     /* line-height: 1.625; */
 }
+/* 상태바 */
+/* 회원가입*/
+.join {
+  /* 정보입력하기 */
+  /* 회원가입 완료 */
+}
 
+.join .step {
+  margin: 0 auto 55px;
+}
+
+.join .step:after {
+  display: block;
+  clear: both;
+  content: '';
+}
+
+.join .step ol li {
+  position: relative;
+  float: left;
+  padding-right: 106px;
+  background-image: url("../assets/images/ico-arrow-right-gray@2x.png");
+  background-size: 14px 24px;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 50px);
+}
+
+.join .step ol li.on .box {
+  border-color: #0094fb;
+  color: #0094fb;
+  font-weight: bold;
+}
+
+.join .step ol li.on:before {
+  background-image: url("../assets/images/ico-login-step1-on@2x.png");
+}
+
+.join .step ol li:before {
+  content: '';
+  position: absolute;
+  top: 13px;
+  left: 56px;
+  width: 27px;
+  height: 25px;
+  background-image: url("../assets/images/ico-login-step1-off@2x.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.join .step ol li:nth-child(2):before {
+  background-image: url("../assets/images/ico-login-step2-off@2x.png");
+}
+
+.join .step ol li:nth-child(2).on:before {
+  background-image: url("../assets/images/ico-login-step2-on@2x.png");
+}
+
+.join .step ol li:nth-child(3):before {
+  width: 26px;
+  height: 27px;
+  background-image: url("../assets/images/ico-login-step3-off@2x.png");
+}
 
 .join .step ol li:nth-child(3).on:before {
-    background-image: url(../assets/images/ico-login-step3-on@2x.png);
+  background-image: url("../assets/images/ico-login-step3-on@2x.png");
 }
-.join .step ol li:nth-child(3):before {
-    width: 26px;
-    height: 27px;
-    background-image: url(../assets/images/ico-login-step3-off@2x.png);
+
+.join .step ol li:last-child {
+  padding-right: 0;
+  background: none;
 }
-.join .step ol li.on:before {
-    background-image: url(../assets/images/ico-login-step1-on@2x.png);
+
+.join .step ol li:last-child:before {
+  width: 25px;
+  height: 25px;
+  background-image: url("../assets/images/ico-login-step4-off@2x.png");
 }
-.join .step ol li:before {
-    content: '';
-    position: absolute;
-    top: 13px;
-    left: 56px;
-    width: 27px;
-    height: 25px;
-    background-image: url(../assets/images/ico-login-step1-off@2x.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
+
+.join .step ol li:last-child.on:before {
+  background-image: url("../assets/images/ico-login-step4-on@2x.png");
 }
+
+.join .step ol li:last-child:after {
+  display: none;
+}
+
+.join .step ol li .box {
+  padding: 0 0 0 90px;
+  width: 240px;
+  height: 50px;
+  border: 2px solid #e6e6e6;
+  border-radius: 25px;
+  line-height: 46px;
+  color: #666;
+}
+/*ㄴㄴㄴㄴㄴㄴㄴ*/
