--- a/src/main/resources/templates/join/joinFail.html
+++ b/src/main/resources/templates/join/joinFail.html
@@ -22,28 +22,7 @@
 <header class="container mb-4">
     <h1 class="text-center">회원가입</h1><br><br>
 </header>
-<div class="content-body">
-    <div class="container">
-        <div class="join join4">
-            <div class="step login-step d-up-lg">
-                <ol>
-                    <li>
-                        <div class="box">약관동의 하기</div>
-                    </li>
-                    <li>
-                        <div class="box">본인인증 하기</div>
-                    </li>
-                    <li>
-                        <div class="box">정보입력 하기</div>
-                    </li>
-                    <li class="on">
-                        <div class="box">회원가입 완료</div>
-                    </li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</div>
+
     <!--Log-in Section-->
     <section>
         <div class="container">
@@ -51,7 +30,7 @@
                 <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                     <div class="card card-signin my-5">
                         <div class="card-body">
-                            <h5 class="card-title text-center mb-5" th:text="|${name}님 회원이 되신걸 축하드립니다!|">회원 가입 완료</h5>
+                            <h5 class="card-title text-center mb-5">이미 존재하는 회원입니다.</h5>
                             <div class="text-center mb-4">
                                 <button class="btn btn-lg btn-primary btn-block text-uppercase" th:onclick="|location.href='@{/}'|">홈으로 가기</button>
                             </div>
