--- a/src/main/resources/templates/join/patient/userJoinPatient.html
+++ b/src/main/resources/templates/join/patient/userJoinPatient.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <head>
+    <title>회원가입</title>
     <!--우편번호 api-->
     <script th:src="@{//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js}"></script>
     <script type="text/javascript" th:src="@{/js/address_number.js}"></script>
@@ -10,8 +11,12 @@
             border-color: #dc3545;
             color: #dc3545;
         }
+        .info {
+            color: #dc3545;
+            font-size: 90%;
+            line-height: 50%;
+        }
     </style>
-    <link rel = "stylesheet" th:href="@{/css/test.css}">
 </head>
 
 <body>
@@ -65,96 +70,77 @@
                         <div class="card-body">
                             <form class="needs-validation" method="post" novalidate th:action th:object="${patient}">
 
-                                <!-- 글로벌 오류 메세지 -->
-                                <div th:if="${#fields.hasGlobalErrors()}" class="text-center mb-4">
-                                    <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-                                       th:text="${err}">전체 오류 메시지</p>
+                                <div class="mb-4">
+                                    <label class="form-label" for="id"><strong>* 아이디</strong></label>
+                                    <div class = "input-group" style="padding-bottom: 20px">
+                                        <input type="text" id="id" th:field="*{loginId}" class="form-control" aria-describedby="addon1" maxlength="20" th:errorclass="field-error">
+                                        <button class="btn btn-outline-primary" type = "submit" id = "addon1">중복 확인</button>
+                                    </div>
+                                    <!-- 오류 메세지 -->
+                                    <div th:if="${#fields.hasGlobalErrors()}" class="text-left">
+                                        <p class="field-error" th:each="err : ${#fields.globalDetailedErrors()}"
+                                           th:if="${err.code == 'idCheckFail'}"
+                                           th:text="|${err.message}|">아이디 중복 오류 메시지</p>
+                                    </div>
+                                    <div class="info">
+                                        <p>※ 6자 이상, 20자 이내로 설정이 가능합니다.</p>
+                                        <p>※ 한글/특수문자는 입력이 불가능 합니다.</p>
+                                    </div>
+
                                 </div>
 
                                 <div class="mb-4">
-                                    <label class="form-label" for="id">아이디</label>
-                                    <div class = "input-group">
-                                        <input type="text" id="id" th:field="*{loginId}" class="form-control" pattern="^[A-za-z0-9]{4,12}$"
-                                            aria-describedby="addon1" required autofocus>
-                                        <button class="btn btn-outline-primary" type = "button" id = "addon1">중복 확인</button>
+                                    <label class="form-label" for="pwd"><strong>* 비밀번호</strong></label>
+                                    <div class = "input-group" style="padding-bottom: 20px">
+                                        <input type="password" id="pwd" th:field="*{loginPw}" class="form-control" maxlength="20">
                                     </div>
-                                    <div class="valid-feedback">
-                                        아이디 형식이 올바릅니다.
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        영문 소문자 4~12자 사이로 입력해주세요.
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <label class="form-label" for="pwd">비밀번호</label>
-                                        <input type="password" id="pwd" th:field="*{loginPw}" class="form-control"
-                                            pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,16}$"
-                                            required autofocus>
-                                        <div class="valid-feedback">
-                                            비밀번호 형식이 올바릅니다.
-                                        </div>
-                                        <div class="invalid-feedback">
-                                            최소 8자리에서 최대 16자리까지 숫자, 영문, 특수문자 각 1개 이상 포함해주세요.
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-6 mb-4">
-                                        <label class="form-label" for="pwdCheck">비밀번호확인</label>
-                                        <input type="password" id="pwdCheck" th:field="*{checkPw}" class="form-control"
-                                            pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,16}$"
-                                            required autofocus>
+                                    <div class="info">
+                                        <p>※ 8자 이상 ~ 20자 이내로 설정해주세요.</p>
+                                        <p>※ 영문, 숫자, 특수문자를 모두 포함해주세요.</p>
+                                        <p>※ 비밀번호 예시: password121!</p>
+                                        <p>※ 문자열이 3자리 이상 연속되거나 동일하지 않게 해주세요. (ex. 111, 123, 321, aaa, abc 등)</p>
                                     </div>
                                 </div>
 
                                 <div class="mb-4">
-                                    <label class="form-label" for="name">이름</label>
-                                    <input type="text" id="name" th:field="*{name}" class="form-control" required autofocus>
+                                    <label class="form-label" for="pwdCheck"><strong>* 비밀번호확인</strong></label>
+                                    <div class = "input-group" style="padding-bottom: 20px">
+                                        <input type="password" id="pwdCheck" th:field="*{checkPw}" class="form-control" maxlength="20">
+                                    </div>
+                                    <!-- 오류 메세지 -->
+                                    <div th:if="${#fields.hasGlobalErrors()}" class="text-left">
+                                        <p class="field-error" th:each="err : ${#fields.globalDetailedErrors()}"
+                                           th:if="${err.code == 'pwCheckFail'}"
+                                           th:text="|${err.message}|">비밀번호 불일치 오류 메시지</p>
+                                    </div>
+                                </div>
+
+                                <div class="mb-4">
+                                    <label class="form-label" for="name"><strong>이름</strong></label>
+                                    <input type="text" id="name" th:field="*{name}" class="form-control" readonly>
                                 </div>
 
                                 <div class="row">
-                                    <label class="form-label" for="human-number">주민등록번호</label>
+                                    <label class="form-label" for="human-number"><strong>주민등록번호</strong></label>
 
                                     <div class="col-md-6">
-                                        <input type="text" id="human-number" th:field="*{rrnFront}" class="form-control"
-                                            placeholder="생년월일 YYMMDD"
-                                            pattern="^(?:[0-9]{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[1,2][0-9]|3[0,1])$"
-                                            required autofocus>
-                                        <div class="valid-feedback">
-                                            주민등록번호 형식이 올바릅니다.
-                                        </div>
-                                        <div class="invalid-feedback">
-                                            주민등록번호 형식이 올바르지않습니다.
-                                        </div>
+                                        <input type="text" id="human-number" th:field="*{rrnFront}" class="form-control" placeholder="생년월일 YYMMDD" maxlength="6" readonly>
                                     </div>
-
                                     <div class="col-md-6 mb-4">
-                                        <input type="password" id="human-number" th:field="*{rrnBack}" class="form-control"
-                                            placeholder="주민번호 뒷 7자리" pattern="[1-4]\d{6}$" required autofocus>
-                                        <div class="valid-feedback">
-                                            주민등록번호 형식이 올바릅니다.
-                                        </div>
-                                        <div class="invalid-feedback">
-                                            주민등록번호 형식이 올바르지않습니다.
-                                        </div>
+                                        <input type="password" id="human-number" th:field="*{rrnBack}" class="form-control" placeholder="주민번호 뒷 7자리" maxlength="7">
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    <label class="form-label" for="phone-number">연락처</label>
+                                    <label class="form-label" for="phoneNumber"><strong>휴대폰 번호</strong></label>
 
                                     <div class="input-group mb-4">
-                                        <input type="text" id="phone-number1" th:field="*{phoneNumberFront}" class="form-control" >
-                                        <span class="input-group-text">-</span>
-                                        <input type="text" id="phone-number2" th:field="*{phoneNumberMid}" class="form-control" >
-                                        <span class='input-group-text'>-</span>
-                                        <input type="text" id="phone-number3" th:field="*{phoneNumberBack}" class="form-control" >
+                                        <input type="text" id="phoneNumber" class="form-control" th:field="*{phoneNumber}" readonly>
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    <label class="form-label" for="post-number">우편번호</label>
+                                    <label class="form-label" for="post-number"><strong>* 우편번호</strong></label>
 
                                     <div class="input-group mb-4 col-md-6">
                                         <input type="text" id="post-number" th:field="*{zipcode}" class="form-control" placeholder="05006"
@@ -164,13 +150,13 @@
                                 </div>
 
                                 <div class="mb-4">
-                                    <label class="form-label" for="address">주소</label>
+                                    <label class="form-label" for="address"><strong>* 주소</strong></label>
                                     <input type="text" id="address" th:field="*{city}" class="form-control" placeholder="ex) 서울특별시 광진구 능동로">
                                 </div>
 
                                 <div class="mb-4">
-                                    <label class="form-label" for="detail-address">상세주소</label>
-                                    <input type="text" id="detail-address" th:field="*{street}" class="form-control" required autofocus>
+                                    <label class="form-label" for="detail-address"><strong>* 상세주소</strong></label>
+                                    <input type="text" id="detail-address" th:field="*{street}" class="form-control">
                                 </div>
 
                                 <div class="text-center mb-4">
@@ -184,11 +170,6 @@
             </div>
         </div>
     </section>
-
-    <!--이전 버튼-->
-    <div class="text-center mb-4">
-        <button class="btn btn-light" type="button" th:onclick="|location.href='@{/join/patient/phoneCheck}'|">이전</button>
-    </div>
 
 <!-- Footer-->
 <div th:replace="fragments/footer :: footer"/>
