--- a/src/main/resources/templates/join/userJobSelect.html
+++ b/src/main/resources/templates/join/userJobSelect.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
+<head>
+    <title>회원가입</title>
+</head>
 <body>
 <!-- Top: logo, login -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
@@ -20,12 +23,12 @@
     <header class = "container mb-5">
         <h1 class = "text-center">회원가입</h1><br><br>
         <p class = "text-center">세종대병원 홈페이지에 방문해주셔서 감사 드립니다. <br> <strong>회원 가입을 진행할 회원을 선택하세요.</strong></p><br>
-        <div class = "progress" style = "height: 30px;">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
-              진행률 25%
-            </div>
-        </div>
+<!--        <div class = "progress" style = "height: 30px;">-->
+<!--            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"-->
+<!--            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">-->
+<!--              진행률 25%-->
+<!--            </div>-->
+<!--        </div>-->
     </header>
 
     <!-- Three Button Select-->
