--- a/src/main/resources/templates/fragments/bodyTop.html
+++ b/src/main/resources/templates/fragments/bodyTop.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="bodyTop">
     <div class="container px-5">
         <a class="navbar-brand" th:onclick="|location.href='@{/}'|" style="cursor:pointer">
-            <img src="assets/images/sejong_black.png" width="37" style="
+            <img th:src="@{/assets/images/sejong_black.png}" width="37" style="
                   border-radius: 70px;
                   -moz-border-radius: 70px;
                   -khtml-border-radius: 70px;
