--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,4 +28,5 @@
     <link rel = "stylesheet" th:href="@{/css/tableCollapse.css}">
     <link rel = "stylesheet" th:href="@{/css/test.css}">
     <link th:href="@{../../assets/images/favicon.ico}" rel="shortcut icon" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
