--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -67,7 +67,7 @@
 
                             <!--진료 예약-->
                             <span class="col-lg-1"></span>
-                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/appointment}'|">
+                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/createAppointment}'|">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                         class="bi bi-person"></i>
                                 </div>
@@ -89,7 +89,7 @@
                                         class="bi bi-person"></i>
                                 </div>
                                 <h2 class="h4 fw-bolder">예약 현황</h2>
-                                <p>회원 예약 내역을 확인할 수 있습니다.</p>
+                                <p>회원 예약 내역을 확인할 수 있습니다.</p><br/>
                             </div>
 
                         </div>
