--- a/src/main/resources/templates/patient/createAppointment1.html
+++ b/src/main/resources/templates/patient/createAppointment1.html
@@ -10,7 +10,7 @@
 <nav th:replace="fragments/bodyTop :: bodyTop" />
 
     <!-- 페이지 Start -->
-    <div class="container-fluid pt-4 px-4" style="margin-left:120px;margin-right:120px">
+    <div class="container-fluid pt-4 px-4" style="margin-left:120px;margin-right:120px; margin-bottom:30px" >
         <div class="row g-4">
             <!--진료예약1-->
             <div class="col-sm-12 col-md-6 col-xl-4 " style=" height: 650px;" id='mydiv'>
@@ -27,7 +27,7 @@
                     <div class="d-flex align-items-center border-bottom py-2" style="padding: top 0px;" th:each="major:${majors}">
                         <label class="box-radio-input">
                             <input type="radio" name="cp_item" th:value="${major.name()}" checked="checked"
-                                   th:onclick="|location.href='@{/patient/appointment/{major} (major=${major.name()})}'|">
+                                   th:onclick="|location.href='@{/patient/createAppointment/{major} (major=${major.name()})}'|">
                             <span th:text="${major.description}">진료과</span>
                         </label>
                     </div>
