--- a/src/main/resources/templates/patient/createAppointment2.html
+++ b/src/main/resources/templates/patient/createAppointment2.html
@@ -10,8 +10,8 @@
 <nav th:replace="fragments/bodyTop :: bodyTop" />
 
     <!-- 페이지 Start -->
-    <div class="container-fluid pt-4 px-4" style="margin-left:120px;margin-right:120px">
-        <div class="row g-4">
+    <div class="container-fluid pt-4 px-4" style="margin-left:120px;margin-right:120px; margin-bottom:30px">
+        <form class="row g-4" method="post">
             <!--step2-->
             <div class="col-sm-12 col-md-6 col-xl-7" style=" height: 780px;">
                 <div class="h-100 bg-light rounded p-4" style="border:1px solid rgb(184, 184, 184);overflow:auto">
@@ -22,91 +22,31 @@
                         <h4 style="font-weight:bold;margin-left:180px;display:inline">
                             진료예약 - STEP2
                         </h4>
-                        <h6 style="font-weight:bold; color:gray;margin-top:30px">의료진 선택</h6>
+                        <h6 style="font-weight:bold; color:gray;margin-top:30px;">의료진 선택</h6>
                     </div>
+
                     <div class="row">
 
+<!--                        의사 출력 -->
 
-<!--                        <div class="col-lg-3 doctor" id="doctor" th:each="doctor: ${doctors}">-->
-<!--                            <div class="card" style="width: 13rem;">-->
-<!--                                <img th:src="${doctor.getProfile().getStoreFileName()}" class="card-img-top" alt="조정석">-->
-<!--                                <div class="card-body">-->
-<!--                                    <h5 class="card-title" th:text="${doctor.info.name}">이름</h5>-->
-<!--                                    <p class="card-text" th:text="${doctor.major.description}">전공</p>-->
-<!--                                    <a href="#" th:href="@{/patient/apppointment/{doctorId} (doctorId=${doctor.getId()})}" class="btn btn-primary">예약하기</a>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        반복 -->
-                        <div class="col" th:each="doctor: ${doctors}">
+                        <div class="col-lg-4" th:each="doctor : ${doctors}">
                             <label class="box-radio" style="margin-top:20px">
-                                <input type="radio" name="card" value="옵션1" checked="checked">
-<!--                                <span style="background: url('assets/images/doctor_image.PNG') no-repeat;-->
-<!--                                    background-color:white;background-size: 8.5rem; width: 11rem;height:15rem;-->
-<!--                                    background-position: 20px 0px; ">-->
-<!--                                    <h6 style="margin-top:175px;margin-left:15px;text-align: left;font-weight:bold;" th:text="${doctor.info.name}">-->
-<!--                                        이름-->
-<!--                                    </h6>-->
-<!--                                    <h6 style="margin-left:15px;text-align: left;" th:text="${doctor.major.description}">-->
-<!--                                        전공-->
-<!--                                    </h6>-->
-<!--                                </span>-->
-                                <img th:src="${doctor.getProfile().getStoreFileName()}" class="card-img-top" alt="조정석">
-                                <div class="card-body">
-                                    <h5 class="card-title" th:text="${doctor.info.name}">이름</h5>
-                                    <p class="card-text" th:text="${doctor.major.description}">전공</p>
-                                    <a href="#" th:href="@{/patient/apppointment/{doctorId} (doctorId=${doctor.getId()})}" class="btn btn-primary">예약하기</a>
-                                </div>
-                            </label>
-                        </div>
-
-
-                        <div class="col">
-                            <label class="box-radio" style="margin-top:20px">
-                                <input type="radio" name="card" value="옵션1">
-                                <span style="background: url('assets/images/doctor_image.PNG') no-repeat;
-                                    background-color:white;background-size: 8.5rem; width: 11rem;height:15rem;
-                                    background-position: 20px 0px; ">
-                                    <h6 style="margin-top:175px;margin-left:15px;text-align: left;font-weight:bold;">
-                                        흉부외과
+                                <input type="radio" name="card" value="옵션1" th:field="${form.doctorId}" th:value="${doctor.getId()}">
+                                <span style="background-color:white;width: 11rem;height:15rem;">
+                                    <img th:src="${doctor.getProfile().getStoreFileName()}" style="width: 10rem;height:10rem;">
+                                    <h6 style=" margin-top:10px;margin-left:5px;margin-right:5px;text-align: center;font-weight:bold;"
+                                        th:text="${doctor.info.name}">
+                                        의사
                                     </h6>
-                                    <h6 style="margin-left:15px;text-align: left;">
-                                        말초신경질환
+                                    <h6 style="margin-left:5px;margin-right:5px;text-align: center;"
+                                        th:text="${doctor.major.description}">
+                                        전공
                                     </h6>
+
                                 </span>
                             </label>
                         </div>
-                        <div class="col">
-                            <label class="box-radio" style="margin-top:20px">
-                                <input type="radio" name="card" value="옵션1">
-                                <span style="background: url('assets/images/doctor_image.PNG') no-repeat;
-                                    background-color:white;background-size: 8.5rem; width: 11rem;height:15rem;
-                                    background-position: 20px 0px; ">
-                                    <h6 style="margin-top:175px;margin-left:15px;text-align: left;font-weight:bold;">
-                                        흉부외과
-                                    </h6>
-                                    <h6 style="margin-left:15px;text-align: left;">
-                                        말초신경질환
-                                    </h6>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="col">
-                            <label class="box-radio" style="margin-top:20px">
-                                <input type="radio" name="card" value="옵션1">
-                                <span style="background: url('assets/images/doctor_image.PNG') no-repeat;
-                                    background-color:white;background-size: 8.5rem; width: 11rem;height:15rem;
-                                    background-position: 20px 0px; ">
-                                    <h6 style="margin-top:175px;margin-left:15px;text-align: left;font-weight:bold;">
-                                        흉부외과
-                                    </h6>
-                                    <h6 style="margin-left:15px;text-align: left;">
-                                        말초신경질환
-                                    </h6>
-                                </span>
-                            </label>
-                        </div>
+
                     </div>
                     <!--자바스크립트-->
                     <script>
@@ -197,36 +137,32 @@
                     <!--달력시작 끝-->
                     <!--달력 입력폼-->
                     <label for="input_date" class="col-sm-2 control-label" style="padding-top:20px">날짜:</label>
-                    <input type="text" id="input_date" style="border: 1px solid #c9c9c9;border-radius: 5px;" /><br><br>
+                    <input type="text" id="input_date" style="border: 1px solid #c9c9c9;border-radius: 5px;" th:field="${form.date}"/><br><br>
                     <!--달력 입력폼 끝-->
                     <!--시간 예약-->
                     <div class="row">
                         <div class="col-xl-3" style="margin-top:10px">
-
                             <label class="box-radio-input"><input type="radio" name="cp_item" value="옵션1"
-                                    checked="checked"><span>12:00</span></label>
+                                    th:field="${form.time}" th:value="|12:00|"><span>12:00</span></label>
                         </div>
                         <div class="col-xl-3" style="margin-top:10px">
-                            <label class="box-radio-input"><input type="radio" name="cp_item"
-                                    value="옵션1"><span>14:00</span></label>
+                            <label class="box-radio-input"><input type="radio" name="cp_item" value="옵션1"
+                                    th:field="${form.time}" th:value="|14:00|"><span>14:00</span></label>
                         </div>
                         <div class="col-xl-3" style="margin-top:10px">
-                            <label class="box-radio-input"><input type="radio" name="cp_item"
-                                    value="옵션1"><span>16:00</span></label>
+                            <label class="box-radio-input"><input type="radio" name="cp_item" value="옵션1"
+                                    th:field="${form.time}" th:value="|16:00|"><span>16:00</span></label>
                         </div>
                         <div class="col-xl-3" style="margin-top:10px">
-                            <label class="box-radio-input"><input type="radio" name="cp_item"
-                                    value="옵션1"><span>16:00</span></label>
-                        </div>
-                        <div class="col-xl-3" style="margin-top:10px">
-                            <label class="box-radio-input"><input type="radio" name="cp_item"
-                                    value="옵션1"><span>16:00</span></label>
+                            <label class="box-radio-input"><input type="radio" name="cp_item" value="옵션1"
+                                    th:field="${form.time}" th:value="|18:00|"><span>14:00</span></label>
                         </div>
                     </div>
                     <!--시간예약 끝-->
                     <!--예약신청 버튼-->
-                    <a class=" btn btn-primary btn-lg" href="patientCurrent.html"
-                        style=" font-size:1.0em; width:110px; height:41px;margin-top:30px;float: right;background-color:#2d8be3;border: 1px solid #2d8be3;border-radius: 20px;">예약신청</a>
+                    <button class=" btn btn-primary btn-lg"
+                        style=" font-size:1.0em; width:110px; height:41px;margin-top:30px;float: right;background-color:#2d8be3;border: 1px solid #2d8be3;border-radius: 20px;"
+                       type = "submit">예약신청</button>
                     <!--예약신청 버튼 끝-->
                     <!--달력/시간css-->
                     <!--css-->
@@ -543,7 +479,7 @@
                 </div>
             </div>
             <!--진료예약2 End-->
-        </div>
+        </form>
         <!--컨테이너 css-->
         <style type="text/css">
             .container-fluid {
@@ -553,24 +489,8 @@
         </style>
     </div>
     <!-- 페이지 End -->
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-            <hr>
-            <p class="m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
-        </div>
-    </footer>
-    <!-- Footer End-->
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<!-- Footer-->
+<div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
