--- a/src/main/resources/templates/patient/departmentSearch.html
+++ b/src/main/resources/templates/patient/departmentSearch.html
@@ -41,43 +41,16 @@
                         <h2 class="card-title text-center">진료과 목록</h2>
                         <hr class="mb-4">
                         <div class="row mx-auto mb-3">
-                            <div class="col-lg-3" onclick="location.href ='#'">
+
+                            <div class="col-lg-3 mb-4" th:onclick="|location.href='@{/patient/#/{major} (major=${major.name()})}'|"
+                                 th:each="major:${majors}" th:value="${major.name()}" style="cursor:pointer">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title text-center">산부인과</h5>
+                                        <h5 class="card-title text-center" th:text="${major.description}">진료과</h5>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3" onclick="location.href ='#'">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title text-center">신경외과</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3" onclick="location.href ='#'">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title text-center">간담췌외과</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3" onclick="location.href ='#'">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title text-center">흉부외과</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mx-auto mb-3">
-                            <div class="col-lg-3" onclick="location.href ='#'">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title text-center">소아외과</h5>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                         <span class="row mt-5 mb-5"></span>
                     </div>
@@ -85,24 +58,11 @@
             </div>
         </div>
     </section>
-
     <div>
-
     </div>
 
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-            <hr>
-            <p class="m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
-        </div>
-    </footer>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!--Ohter JS-->
-    <script src="otherFunction.js"></script>
+<!-- Footer-->
+<div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
