--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -2,62 +2,77 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark" th:fragment="sidebar">
-    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+    <div
+            class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
+            id="menu">
             <li class="nav-item">
-                <a th:onclick="|location.href='@{/admin}'|" class="nav-link align-middle px-0 text-white" style="cursor:pointer">
-                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline" style="font-weight:bold">메인 페이지</span>
+                <a href="/index.html" class="nav-link align-middle px-0 text-white">
+                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">메인 페이지</span>
                 </a>
             </li>
             <li>
-                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
+                <a href="#submenu1" data-bs-toggle="collapse"
+                   class="nav-link px-0 align-middle text-white">
                     <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">의사</span>
                 </a>
-                <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+                <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                     <li class="w-100">
-                        <a class="nav-link px-0 text-white" th:onclick="|location.href='@{/admin/doctorView}'|" style="cursor:pointer">
-                            <span class="d-none d-sm-inline">의사 정보 조회</span>
+                        <a href="adminDoctorApprove.html" class="nav-link px-0 text-white">
+                            <span class="d-none d-sm-inline">승인</span>
+                        </a>
+                    </li>
+                    <li class="w-100">
+                        <a href="adminDoctor.html" class="nav-link px-0 text-white">
+                            <span class="d-none d-sm-inline fw-bold">조회</span>
                         </a>
                     </li>
                 </ul>
-
             </li>
             <li>
-                <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
-                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">간호사</span></a>
+                <a href="#submenu2" data-bs-toggle="collapse"
+                   class="nav-link px-0 align-middle text-white">
+                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">간호사</span>
+                </a>
                 <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
                     <li class="w-100">
-                        <a href="admin_nurse.html" class="nav-link px-0 text-white">
-                            <span class="d-none d-sm-inline">간호사 정보 등록</span></a>
+                        <a href="adminNurseApprove.html" class="nav-link px-0 text-white"> <span
+                                class="d-none d-sm-inline">승인</span></a>
+                    </li>
+                    <li class="w-100">
+                        <a href="adminNurse.html" class="nav-link px-0 text-white"> <span
+                                class="d-none d-sm-inline">조회</span></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
-                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">환자</span>
+                <a href="#submenu3" data-bs-toggle="collapse"
+                   class="nav-link px-0 align-middle text-white">
+                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">질병·약</span>
                 </a>
                 <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
                     <li class="w-100">
-                        <a href="admin_patient.html" class="nav-link px-0 text-white"> <span class="d-none d-sm-inline">환자 정보 등록</span></a>
+                        <a href="adminMedicine.html" class="nav-link px-0 text-white"> <span
+                                class="d-none d-sm-inline">약 조회</span></a>
+                    </li>
+                    <li class="w-100">
+                        <a href="adminDisease.html" class="nav-link px-0 text-white"> <span
+                                class="d-none d-sm-inline">질병 조회</span></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="#submenu4" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
-                    <i class="bi bi-eyedropper fs-3"></i> <span class="ms-1 d-none d-sm-inline">병/약</span>
+                <a href="#submenu4" data-bs-toggle="collapse"
+                   class="nav-link px-0 align-middle text-white">
+                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">ESL</span>
                 </a>
                 <ul class="collapse nav flex-column ms-1" id="submenu4" data-bs-parent="#menu">
                     <li class="w-100">
-                        <a href="admin_drug.html" class="nav-link px-0 text-white"> <span class="d-none d-sm-inline">약 등록</span></a>
-                    </li>
-                    <li class="w-100">
-                        <a class="nav-link px-0 text-white" th:onclick="|location.href='@{/admin/diseaseView}'|" style="cursor:pointer">
-                            <span class="d-none d-sm-inline">병 등록</span>
-                        </a>
+                        <a href="adminEsl.html" class="nav-link px-0 text-white"> <span
+                                class="d-none d-sm-inline">ESL 등록</span></a>
                     </li>
                 </ul>
             </li>
-
         </ul>
         <hr>
     </div>
