--- a/src/main/resources/templates/patient/createAppointment1.html
+++ b/src/main/resources/templates/patient/createAppointment1.html
@@ -24,12 +24,14 @@
                         <h6 style="font-weight:bold; color:gray;margin-top:30px">진료과 선택</h6>
                     </div>
 
-                    <div class="d-flex align-items-center border-bottom py-2" style="padding: top 0px;" th:each="major:${majors}">
-                        <label class="box-radio-input">
-                            <input type="radio" name="cp_item" th:value="${major.name()}" checked="checked"
-                                   th:onclick="|location.href='@{/patient/createAppointment/{major} (major=${major.name()})}'|">
-                            <span th:text="${major.description}">진료과</span>
-                        </label>
+                    <div class="bg-light rounded " style="overflow:auto;height: 85%;">
+                        <div class="d-flex align-items-center border-bottom py-2" style="padding: top 0px;" th:each="major:${majors}">
+                            <label class="box-radio-input">
+                                <input type="radio" name="cp_item" th:value="${major.name()}"
+                                       th:onclick="|location.href='@{/patient/createAppointment/{major} (major=${major.name()})}'|">
+                                <span th:text="${major.description}">진료과</span>
+                            </label>
+                        </div>
                     </div>
 
                     <!--css-->
